sketch of create and get OutStudyEvents
